# shader_learning

./: Cargo.toml
assets/shaders/: animate_shader.wgsl  custom_material.wgsl  random.wgsl
examples/: animate_shader.rs  compute_shader_game_of_life.rs  cubism_demo.rs  custom.rs  disco.rs  many_cubes.rs  painting.rs  shader.rs
src/: camera_controller.rs  lib.rs  main.rs
src/config/: mod.rs
src/helpers/: mod.rs  overlay.rs
src/scene/: mod.rs
src/shapes/: mod.rs
