[package]
name = "shader_learning"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["lib"]

[dependencies]
#bevy =  { version = "0.7.0" }
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy = { path = "../bevy" }
#bevy_slyedoc_bvh = { git = "https://github.com/slyedoc/bevy_slyedoc_bvh" }
rand = "0.8.5"
rand_chacha = "0.3.1"